packages/typ/tests/fixtures/diagnostics/0210_adt_constructor_bool_arg_mismatch_08.ml.expected
File "0210_adt_constructor_bool_arg_mismatch_08.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0210_adt_constructor_bool_arg_mismatch_08 is not a valid module name.

File "0210_adt_constructor_bool_arg_mismatch_08.ml", line 2, characters 12-13:
2 | let _ = Off 7
                ^
Error: The constant 7 has type int but an expression was expected of type
         bool
